syntax = "proto3";

package darwinx.strategy;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Strategy {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string source_code = 4;
  string format = 5;
  map<string, string> parameters = 6;
  optional double sharpe_ratio = 7;
  optional double total_return = 8;
  optional double max_drawdown = 9;
  string status = 10;
  google.protobuf.Timestamp created_at = 11;
}

message GenerateRequest {
  int32 count = 1;
  string method = 2;
  repeated string indicators = 3;
  map<string, string> constraints = 4;
}

message ProgressUpdate {
  string job_id = 1;
  float progress = 2;
  string message = 3;
  repeated Strategy partial_results = 4;
}

message ListRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string filter = 3;
  optional string sort_by = 4;
}

message ListResponse {
  repeated Strategy strategies = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetRequest {
  int32 id = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
}

message ExportRequest {
  int32 strategy_id = 1;
  string format = 2;
}

message ExportChunk {
  bytes data = 1;
}

service StrategyService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (Strategy);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Generate(GenerateRequest) returns (stream ProgressUpdate);
  rpc Export(ExportRequest) returns (stream ExportChunk);
}
